# nilsbohr

./: Dockerfile  README.md  railway.json
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  sample.json  test.sh  test_cors.sh
backend/src/: git_layer.rs  main.rs  models.rs  parser.rs  routes.rs  symbol_table.rs
backend/src/languages/: c_parser.rs  cpp_parser.rs  java_parser.rs  js_parser.rs  mod.rs  py_parser.rs  rs_parser.rs  ts_js_parser.rs  ts_parser.rs
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  PixiApp.tsx  Player.tsx
frontend/src/app/: App.tsx  PixiApp.tsx
frontend/src/app/components/hero/: footer.css  footer.tsx  navbar.css  (+3 more)
frontend/src/app/pages/: Home.css  Home.tsx
frontend/src/assets/: sample.json
frontend/src/components/hero/: footer.tsx  mainCompo.tsx  navbar.tsx
frontend/src/engine/: Camera.ts  ChunkManager.ts  CityGenerator.ts  CityLayout.ts  Inputs.ts  Minimap.ts  SceneManager.ts  SceneManager.tsx  SeededRandom.ts  WorldGenerator.ts  WorldMiniMap.ts
frontend/src/engine/CityGenerator/: BuildingLayouter.ts  CityGenerator.ts  CollisionResolver.ts  DistrictLayouter.ts  index.ts  types.ts
frontend/src/engine/GroundGraphics/: GroundChunk.ts  GroundChunkManager.ts  GroundProps.ts  GroundTiles.ts  Terrain.ts
frontend/src/pages/: Home.tsx
frontend/src/scenes/: BuildingScene.ts  CityScene.tsx  RoomScene.ts  WorldScene.ts  WorldScene.tsx
frontend/src/sprites/: ArtifactSprite.ts  Building.tsx  City.tsx  Player.ts  Player.tsx  Room.ts
frontend/src/types/: SeedTypes.ts  Types.ts
(+9 files in other folders)
